Adding Authentication controller, LoginUserViewModel and adjusting mappings in Startup class

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DaniloRenatoCommerceConnectionString": "Server=localhost\\SQLEXPRESS;Database=DaniloRenatoCommerce;Trusted_Connection=True;"
+    "OrdersConnectionString": "Server=localhost\\SQLEXPRESS;Database=Orders;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
