Changing DbContext name and adding migrations

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "OrdersConnectionString": "Server=localhost\\SQLEXPRESS;Database=Orders;Trusted_Connection=True;"
   },
+  "TokenKey":  "mysupersecretkey",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
