Adding OrderItem entity, OrderItemViewModel and Migrations

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrdersConnectionString": "Server=localhost\\SQLEXPRESS;Database=Orders;Trusted_Connection=True;"
+    "OrdersConnectionString": "Server=localhost\\SQLEXPRESS;Database=OrdersDatabase;Trusted_Connection=True;"
   },
   "TokenKey":  "mysupersecretkey",
   "Logging": {
