Adjusting connection string to work with SQL Server docker instance

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "OrdersConnectionString": "Server=localhost\\SQLEXPRESS;Database=OrdersDatabase;Trusted_Connection=True;"
+    "OrdersConnectionString": "Server=db,1433;Database=OrdersDatabase;User=sa;Password=123Mudar#"
   },
   "TokenKey":  "mysupersecretkey",
   "Logging": {
